k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-lab
  labels:
    app: devsecops-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops-lab
  template:
    metadata:
      labels:
        app: devsecops-lab
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: devsecops-lab
        image: devsecops-lab:vulnerable
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
