k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-lab-service
spec:
  selector:
    app: devsecops-lab
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
